--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -32,7 +32,7 @@ width: 163px;
     color: #DF041D !important;
     cursor: pointer;
 }
-select, textarea{
+.formselop{
     background: #F0F0E9;
 border: medium none;
 color: #696763;
