--- a/views/listbusiness.html
+++ b/views/listbusiness.html
@@ -7,15 +7,15 @@
                             <h5>Name</h5>
 							<input type="text" ng-model="list.name" placeholder="Name"/>
 							<h5>category</h5>
-							<select ng-model="list.category">
+							<select ng-model="list.category" class="formselop">
                                 <option>category1</option>
                             </select>
                             <h5>Mode Of Payment</h5>
-							<select ng-model="list.modeofpaymnet">
+							<select ng-model="list.modeofpaymnet" class="formselop">
                                 <option>category1</option>
                             </select>
                             <h5>Days Of Operation</h5>
-							<select ng-model="list.daysofoperation">
+							<select ng-model="list.daysofoperation" class="formselop">
                                 <option>category1</option>
                             </select>
                             <h5>Latitude</h5>
@@ -23,9 +23,9 @@
 							<h5>Longitude</h5>
 							<input type="text" ng-model="list.longitude" placeholder="Longitude"/>
                            <h5>Address</h5>
-                            <textarea ng-model="list.address" placeholder="Address"></textarea>
+                            <textarea ng-model="list.address" placeholder="Address" class="formselop"></textarea>
                             <h5>City</h5>
-							<select ng-model="list.city">
+							<select ng-model="list.city" class="formselop">
                                 <option>category1</option>
                             </select>
                             <h5>Pincode</h5>
@@ -35,7 +35,7 @@
 							<h5>Country</h5>
 							<input type="text" ng-model="list.country" placeholder="Country"/>
 							<h5>Description</h5>
-							<textarea ng-model="list.description" placeholder="Description"></textarea>
+							<textarea ng-model="list.description" placeholder="Description" class="formselop"></textarea>
 							<h5>Contact Number</h5>
 							<input type="number" max="11" min="6" ng-model="list.contact" placeholder="Contact Number"/>
 							<h5>Email</h5>
@@ -55,20 +55,20 @@
 							<h5>Time Of Operation Ends</h5>
 							<input type="text" ng-model="list.timeofoperationend" placeholder="Time Of Operation Ends"/>
                             <h5>Type</h5>
-							<select ng-model="list.type">
+							<select ng-model="list.type" class="formselop">
                                 <option>category1</option>
                             </select>
 							<h5>Credits</h5>
 							<input type="text" ng-model="list.credits" placeholder="Credits"/>
                             <h5>IsVerified</h5>
-							<select ng-model="list.isverified">
+							<select ng-model="list.isverified" class="formselop">
                                 <option>category1</option>
                             </select>
 							<h5>Video</h5>
 							<input type="text" ng-model="list.video" placeholder="Video"/>
 							<h5>Logo</h5>
 							<input type="file" ng-model="list.logo" placeholder="Video"/>
-							<button class="btn btn-default" ng-click="enquiryuser(enquiry)">Signup</button>
+							<button class="btn btn-default" ng-click="enquiryuser(enquiry)">Create Listing</button>
 						</form>
 					</div>
             </div>
